--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "express-jwt": "^5.3.1",
+    "helmet": "^3.13.0",
     "jsonwebtoken": "^8.3.0",
     "mariadb": "^0.7.0",
     "morgan": "^1.9.0",
