--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "helmet": "^3.13.0",
     "jsonwebtoken": "^8.3.0",
     "mariadb": "^0.7.0",
+    "mongodb": "^3.1.8",
     "morgan": "^1.9.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0"
